--- a/analysis/matching_tissue_v2.Rmd
+++ b/analysis/matching_tissue_v2.Rmd
@@ -137,7 +137,7 @@ combine_vectors <- function(vec1, vec_cor1, vec2, vec_cor2, pad_with_na = TRUE) 
 
 sum_cat <- sum_all[sum_all$trait =="aFib-ebi-a-GCST006414",]
 
-DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analyzed)'),options = list(pageLength = 5) )
 ```
 
 ## Filtering based on the number of high PIP genes
@@ -209,7 +209,7 @@ DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: lef
 
 sum_cat <- sum_all[sum_all$trait =="IBD-ebi-a-GCST004131",]
 
-DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analyzed)'),options = list(pageLength = 5) )
 ```
 
 ## Filtering based on the number of high PIP genes
@@ -281,7 +281,7 @@ DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: lef
 
 sum_cat <- sum_all[sum_all$trait =="LDL-ukb-d-30780_irnt",]
 
-DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analyzed)'),options = list(pageLength = 5) )
 ```
 
 ## Filtering based on the number of high PIP genes
@@ -353,7 +353,7 @@ DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: lef
 
 sum_cat <- sum_all[sum_all$trait =="SBP-ukb-a-360",]
 
-DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analyzed)'),options = list(pageLength = 5) )
 ```
 
 ## Filtering based on the number of high PIP genes
@@ -425,7 +425,7 @@ DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: lef
 
 sum_cat <- sum_all[sum_all$trait =="SCZ-ieu-b-5102",]
 
-DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analyzed)'),options = list(pageLength = 5) )
 ```
 
 ## Filtering based on the number of high PIP genes
@@ -497,7 +497,7 @@ DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: lef
 
 sum_cat <- sum_all[sum_all$trait =="WBC-ieu-b-30",]
 
-DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analyzed)'),options = list(pageLength = 5) )
 ```
 
 ## Filtering based on the number of high PIP genes
