--- a/analysis/matching_tissue.Rmd
+++ b/analysis/matching_tissue.Rmd
@@ -125,7 +125,7 @@ combine_vectors <- function(vec1, vec_cor1, vec2, vec_cor2, pad_with_na = TRUE) 
 
 sum_cat <- sum_all[sum_all$traits =="aFib-ebi-a-GCST006414",]
 
-DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analyzed)'),options = list(pageLength = 5) )
 ```
 
 ## Filtering based on the number of high PIP genes
@@ -204,7 +204,7 @@ DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: lef
 
 sum_cat <- sum_all[sum_all$traits =="IBD-ebi-a-GCST004131",]
 
-DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analyzed)'),options = list(pageLength = 5) )
 ```
 
 ## Filtering based on the number of high PIP genes
@@ -280,7 +280,7 @@ DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: lef
 
 sum_cat <- sum_all[sum_all$traits =="LDL-ukb-d-30780_irnt",]
 
-DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analyzed)'),options = list(pageLength = 5) )
 ```
 
 ## Filtering based on the number of high PIP genes
@@ -356,7 +356,7 @@ DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: lef
 
 sum_cat <- sum_all[sum_all$traits =="SBP-ukb-a-360",]
 
-DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analyzed)'),options = list(pageLength = 5) )
 ```
 
 ## Filtering based on the number of high PIP genes
@@ -433,7 +433,7 @@ DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: lef
 
 sum_cat <- sum_all[sum_all$traits =="SCZ-ieu-b-5102",]
 
-DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analyzed)'),options = list(pageLength = 5) )
 ```
 
 ## Filtering based on the number of high PIP genes
@@ -509,7 +509,7 @@ DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: lef
 
 sum_cat <- sum_all[sum_all$traits =="WBC-ieu-b-30",]
 
-DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analyzed)'),options = list(pageLength = 5) )
 ```
 
 ## Filtering based on the number of high PIP genes
