--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -21,7 +21,7 @@ editor_options:
 
 # Multi-tissue 
 
-## Package V1.0
+Package V1.0
 
   * [Deciding the matching tissue](https://sq-96.github.io/multigroup_ctwas_analysis/matching_tissue.html)
   * [Multi-tissue analysis, merging the LD blocks](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue_ldmerge.html)
@@ -29,18 +29,18 @@ editor_options:
   * [Enrichment analysis -- enriched pathways](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue_ldmerge_enriched_pwy.html)
   * LDL ten tissues analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_ten_tissues.html)
   
-## Package V2.0
+Package V2.0
 
   * [Deciding the matching tissue](https://sq-96.github.io/multigroup_ctwas_analysis/matching_tissue_v2.html)
 
 # Single QTL analysis
 
-## Package V1.0
+Package V1.0
 
   * APA QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis.html)
   * histone QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/histone_weights_analysis.html)
   
-## Package V2.0
+Package V2.0
 
   * [APA QTL analysis (using APA FUSION models by Chen et al.)](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis_chenetal.html)
 
