--- a/analysis/simulation_E_S_three_tissues_new.Rmd
+++ b/analysis/simulation_E_S_three_tissues_new.Rmd
@@ -152,6 +152,13 @@ f2 <- plot_PIP_combined(results_dir, runtag, simutags, "GTEXLD", main = "Gene le
 gridExtra::grid.arrange(f1, f2, ncol=2)
 ```
 
+### PIP Calibration Plot based on UKBB LD (filter out cs index 0)
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
+f1 <- plot_PIP(results_dir, runtag, simutags, "UKBBLD", main = "molecular traits PIPs")
+f2 <- plot_PIP_combined(results_dir, runtag, simutags, "UKBBLD", main = "Gene level PIPs")
+gridExtra::grid.arrange(f1, f2, ncol=2)
+```
+
 ### PIP Calibration Plot of expression traits (filter out cs index 0)
 ```{r, fig.width= 8, fig.height= 4, echo=FALSE, warning=FALSE}
 f1 <- plot_PIP(results_dir, runtag, simutags, "GTEXLD", main = "GTEX LD")
