--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -21,28 +21,20 @@ editor_options:
 
 # Multi-tissue 
 
-Package V1.0
-
   * [Deciding the matching tissue](https://sq-96.github.io/multigroup_ctwas_analysis/matching_tissue.html)
   * [Multi-tissue analysis, merging the LD blocks](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue_ldmerge.html)
   * [Validation](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue_ldmerge_validation.html)
   * [Enrichment analysis -- enriched pathways](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue_ldmerge_enriched_pwy.html)
   * LDL ten tissues analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_ten_tissues.html)
-  
-Package V2.0
-
-  * [Deciding the matching tissue](https://sq-96.github.io/multigroup_ctwas_analysis/matching_tissue_v2.html)
 
 # Single QTL analysis
 
-Package V1.0
-
   * APA QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis.html)
   * histone QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/histone_weights_analysis.html)
-  
-Package V2.0
+  * APA QTL analysis (using APA FUSION models by Chen et al.)[link](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis_chenetal.html)
 
-  * [APA QTL analysis (using APA FUSION models by Chen et al.)](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis_chenetal.html)
+# Real data analysis
+  * Real data analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/read_data_analysis.html)
 
 
 # Simulation results
