--- a/analysis/real_data_analysis.Rmd
+++ b/analysis/real_data_analysis.Rmd
@@ -25,12 +25,12 @@ ctwas_parameters <- summarize_param(param, gwas_n)
 
 ### Heritability contribution by types
 ```{r}
-sum_pve_across_types(ctwas_parameters)
+DT::datatable(sum_pve_across_types(ctwas_parameters))
 ```
 
 ### Heritability contribution by contexts
 ```{r}
-sum_pve_across_contexts(ctwas_parameters)
+DT::datatable(sum_pve_across_contexts(ctwas_parameters))
 ```
 
 ```{r echo=FALSE}
@@ -58,12 +58,12 @@ ctwas_parameters <- summarize_param(param, gwas_n)
 
 ### Heritability contribution by types
 ```{r}
-sum_pve_across_types(ctwas_parameters)
+DT::datatable(sum_pve_across_types(ctwas_parameters))
 ```
 
 ### Heritability contribution by contexts
 ```{r}
-sum_pve_across_contexts(ctwas_parameters)
+DT::datatable(sum_pve_across_contexts(ctwas_parameters))
 ```
 
 ```{r echo=FALSE}
@@ -91,12 +91,12 @@ ctwas_parameters <- summarize_param(param, gwas_n)
 
 ### Heritability contribution by types
 ```{r}
-sum_pve_across_types(ctwas_parameters)
+DT::datatable(sum_pve_across_types(ctwas_parameters))
 ```
 
 ### Heritability contribution by contexts
 ```{r}
-sum_pve_across_contexts(ctwas_parameters)
+DT::datatable(sum_pve_across_contexts(ctwas_parameters))
 ```
 
 ```{r echo=FALSE}
@@ -124,12 +124,12 @@ ctwas_parameters <- summarize_param(param, gwas_n)
 
 ### Heritability contribution by types
 ```{r}
-sum_pve_across_types(ctwas_parameters)
+DT::datatable(sum_pve_across_types(ctwas_parameters))
 ```
 
 ### Heritability contribution by contexts
 ```{r}
-sum_pve_across_contexts(ctwas_parameters)
+DT::datatable(sum_pve_across_contexts(ctwas_parameters))
 ```
 
 ```{r echo=FALSE}
@@ -157,12 +157,12 @@ ctwas_parameters <- summarize_param(param, gwas_n)
 
 ### Heritability contribution by types
 ```{r}
-sum_pve_across_types(ctwas_parameters)
+DT::datatable(sum_pve_across_types(ctwas_parameters))
 ```
 
 ### Heritability contribution by contexts
 ```{r}
-sum_pve_across_contexts(ctwas_parameters)
+DT::datatable(sum_pve_across_contexts(ctwas_parameters))
 ```
 
 ```{r echo=FALSE}
