--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -21,20 +21,29 @@ editor_options:
 
 # Multi-tissue 
 
+Package V1.0
+
   * [Deciding the matching tissue](https://sq-96.github.io/multigroup_ctwas_analysis/matching_tissue.html)
   * [Multi-tissue analysis, merging the LD blocks](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue_ldmerge.html)
   * [Validation](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue_ldmerge_validation.html)
   * [Enrichment analysis -- enriched pathways](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue_ldmerge_enriched_pwy.html)
   * LDL ten tissues analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_ten_tissues.html)
+  
+Package V2.0
+
+  * [Deciding the matching tissue](https://sq-96.github.io/multigroup_ctwas_analysis/matching_tissue_v2.html)
 
 # Single QTL analysis
 
+Package V1.0
+
   * APA QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis.html)
   * histone QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/histone_weights_analysis.html)
-  * APA QTL analysis (using APA FUSION models by Chen et al.)[link](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis_chenetal.html)
+  
+Package V2.0
 
-# Real data analysis
-  * Real data analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/real_data_analysis.html)
+  * [APA QTL analysis (using APA FUSION models by Chen et al.)](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis_chenetal.html)
+
 
 # Simulation results
 
@@ -53,3 +62,5 @@ editor_options:
 
   * LDL - Liver and Adipose - Expression and Splicing [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_Liver_Adipose_E_S.html)
   * LDL - Multi contexts/types [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_multi_context_type.html)
+  
+  [Multi-groups for 6 traits and top 5 tissues selected by eQTL analysis](https://sq-96.github.io/multigroup_ctwas_analysis/real_data_analysis.html)
