--- a/analysis/matching_tissue_v2.Rmd
+++ b/analysis/matching_tissue_v2.Rmd
@@ -608,11 +608,18 @@ DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: lef
 
 # Comparing with the results from package V1
 
-The only different setting running these analyses: 
+The different settings running these analyses: 
+
+1. Weights 
 
 - When running V1: we used weights for nolnc genes
-
 - When running V2: we just used weights for protein-coding genes, which are a bit fewer.
+
+2. Region merge
+
+- When running V1: we merged regions having boundary genes. 
+- When running V2: we didn't do post processing. 
+
 
 
 ```{r, fig.width=15, fig.height=5}
