--- a/analysis/apa_weights_analysis_chenetal.Rmd
+++ b/analysis/apa_weights_analysis_chenetal.Rmd
@@ -39,16 +39,43 @@ load("/project2/xinhe/shared_data/multigroup_ctwas/weights/apa_models/Adipose_Su
 DT::datatable(wgt.matrix[1:10,],caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','Weights for NM_000049.4 (10 of 4000 are shown here)'),options = list(pageLength = 5))
 ```
 
-
-
-
-
-
-# Analysis 
+# Analysis - protein-coding genes, top 10 SNPs with largest abs(weights)
 
 ## Settings 
 
-- Fusion Model: enet model, all SNPs with non-zero weights
+- Fusion Model: enet model, top 10 SNPs with largest abs(weights), protein-coding genes
+- thin = 0.1,
+- niter_prefit = 3
+- niter = 30
+- L = 5
+- group_prior_var_structure = "independent"
+- maxSNP = 20000
+- min_nonSNP_PIP = 0.5
+
+## Results summary 
+
+```{r}
+load("/project/xinhe/xsun/multi_group_ctwas/3.apa_testing/summary_coding/para_pip08.rdata")
+colnames(para_sum)[ncol(para_sum)] <- "%ofpve"
+para_sum$`%ofpve` <- as.numeric(para_sum$`%ofpve`)*10
+DT::datatable(para_sum,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','parameter estimation'),options = list(pageLength = 5))
+```
+
+locuz zoom plots for the high pip protein coding genes. 
+
+```{r}
+load("/project/xinhe/xsun/multi_group_ctwas/3.apa_testing/summary_coding/genedetails_cs_pip08.rdata")
+
+DT::datatable(gene_table_cut_cs,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','genes with pip > 0.8 & in credible sets (the genes whose pos column is na are not protein-coding genes)'),options = list(pageLength = 5))
+```
+
+
+
+# Analysis - all SNPs, all genes
+
+## Settings 
+
+- Fusion Model: enet model, all SNPs with non-zero weights, all genes (non-coding genes included)
 - thin = 0.1,
 - niter_prefit = 3
 - niter = 30
@@ -62,6 +89,7 @@ DT::datatable(wgt.matrix[1:10,],caption = htmltools::tags$caption(style = 'capti
 ```{r}
 load("/project/xinhe/xsun/multi_group_ctwas/3.apa_testing/summary/para_pip08.rdata")
 colnames(para_sum)[ncol(para_sum)] <- "%ofpve"
+para_sum$`%ofpve` <- as.numeric(para_sum$`%ofpve`)*10
 DT::datatable(para_sum,caption = htmltools::tags$caption(style = 'caption-side: left; text-align: left; color:black; font-size:150%;','parameter estimation'),options = list(pageLength = 5))
 ```
 
