--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -63,4 +63,5 @@ Package V2.0
   * LDL - Liver and Adipose - Expression and Splicing [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_Liver_Adipose_E_S.html)
   * LDL - Multi contexts/types [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_multi_context_type.html)
   
-  [Multi-groups for 6 traits and top 5 tissues selected by eQTL analysis](https://sq-96.github.io/multigroup_ctwas_analysis/real_data_analysis.html)
+  [6 Traits, 5 tissues, eQTL + sQTL + apaQTL](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_6traits_15weights.html)
+    
