--- a/analysis/matching_tissue_v2.Rmd
+++ b/analysis/matching_tissue_v2.Rmd
@@ -19,6 +19,9 @@ output:
 - group_prior_var_structure = “independent”
 - maxSNP = 20000
 - min_nonSNP_PIP = 0.5
+- protein-coding genes selected
+
+
 
 ## Traits
 
@@ -612,7 +615,7 @@ The different settings running these analyses:
 
 1. Weights 
 
-- When running V1: we used weights for nolnc genes
+- When running V1: we used weights for nolnc genes (protein-coding and pseudogenes left)
 - When running V2: we just used weights for protein-coding genes, which are a bit fewer.
 
 2. Region merge
