--- a/analysis/multi_group_6traits_15weights.Rmd
+++ b/analysis/multi_group_6traits_15weights.Rmd
@@ -87,6 +87,50 @@ sum_pip_across_contexts <- function(finemap_res, mapping_data){
   return(df_gene)
 }
 
+
+sum_pip_across_contexts_nocs <- function(finemap_res, mapping_data){
+
+  #finemap_res <- finemap_res[finemap_res$cs_index!=0,]
+  finemap_gene_res <- finemap_res[finemap_res$type!="SNP",]
+  finemap_gene_res$gene <- sapply(finemap_gene_res$id, function(x){unlist(strsplit(x,"[|]"))[1]})
+  finemap_gene_res <- finemap_gene_res %>% plyr::join(mapping_data, by = "gene") %>% dplyr::select(-gene) %>% na.omit()
+  finemap_gene_res <- finemap_gene_res %>% group_by(id) %>% mutate(susie_pip_adjusted = ifelse(n() > 1, susie_pip / n(), susie_pip)) %>% ungroup() %>% dplyr::select(-susie_pip) %>% dplyr::rename(susie_pip = susie_pip_adjusted)
+
+   df_gene <- finemap_gene_res %>%
+  group_by(genename) %>%
+  summarise(
+    combined_pip = sum(susie_pip),
+    max_cs_index = max(cs_index)
+  )
+
+  # Rename the columns
+  colnames(df_gene) <- c("genename", "combined_pip", "cs_index")
+
+# Iterate over unique contexts and aggregate susie_pip values
+  for(j in unique(finemap_gene_res$context)){
+    tmp_res <- finemap_gene_res %>%
+      filter(context == j) %>%
+      group_by(genename) %>%
+      summarise(susie_pip_sum = sum(susie_pip)) %>%
+      ungroup()
+  
+    # Rename columns
+    colnames(tmp_res) <- c("genename", j)
+    tmp_res[, j] <- round(tmp_res[, j], 3)
+  
+    # Merge with the main data frame and replace NA with 0
+    df_gene <- plyr::join(df_gene, tmp_res, by = "genename") %>% replace(is.na(.), 0)
+  }
+
+  # Round combined_pip to 3 decimal places
+  df_gene$combined_pip <- round(df_gene$combined_pip, 3)
+
+  # Order by combined_pip in descending order
+  df_gene <- df_gene[order(-df_gene$combined_pip), ]
+
+  return(df_gene)
+}
+
 sum_pip_across_types <- function(finemap_res, mapping_data){
 
   finemap_res <- finemap_res[finemap_res$cs_index!=0,]
@@ -184,9 +228,57 @@ sum_pve_across_types <- function(ctwas_parameters) {
 
 load("/project2/xinhe/shared_data/multigroup_ctwas/gwas/samplesize.rdata")
 
+process_fm_res_single <- function(finemap_res, mapping_data) {
+  
+  finemap_res <- finemap_res
+  mapping_data <- mapping_data
+  
+  finemap_gene_res <- finemap_res[finemap_res$type!="SNP",]
+  finemap_gene_res <- finemap_gene_res[finemap_gene_res$cs_index!=0,]
+  finemap_gene_res$gene <- sapply(finemap_gene_res$id, function(x){unlist(strsplit(x,"[|]"))[1]})
+  finemap_gene_res <- finemap_gene_res %>% plyr::join(mapping_data, by = "gene") %>% dplyr::select(-gene) %>% na.omit()
+  
+  finemap_gene_res <- finemap_gene_res[,c("genename","susie_pip")]
+  colnames(finemap_gene_res) <- c("genename","PIP_single_group")
+  return(finemap_gene_res)
+}
+
+calculate_sum_overlap <- function(tissues, trait, combined_pip_by_contexts, E_S_A_mapping) {
+  sum_overlap_for_all <- c()
+  
+  for (i in seq_along(tissues)) {
+    tissue <- tissues[i]
+    file_res_single <- paste0("/project/xinhe/xsun/multi_group_ctwas/1.single_tissue/results/", trait, "/", tissue, "/", trait, "_", tissue, ".finemap_res.RDS")
+    finemap_res_single <- readRDS(file_res_single)
+    
+    finemap_res_single <- process_fm_res_single(finemap_res = finemap_res_single, mapping_data = E_S_A_mapping)
+    finemap_res_multi <- combined_pip_by_contexts
+    
+    sig_gene_single <- finemap_res_single[finemap_res_single$PIP_single_group > 0.8, ]
+    sig_gene_multi <- finemap_res_multi[finemap_res_multi$combined_pip > 0.8, ]
+    
+    merged_siggene <- merge(sig_gene_single, sig_gene_multi, by = "genename", all.x = TRUE, all.y = TRUE)
+    
+    tmp <- c(
+      sum(merged_siggene$PIP_single_group > 0.8, na.rm = TRUE),
+      sum(merged_siggene$PIP_single_group > 0.8 & merged_siggene$combined_pip > 0.8, na.rm = TRUE),
+      sum(merged_siggene$combined_pip > 0.8, na.rm = TRUE)
+    )
+    
+    sum_overlap_for_all <- rbind(sum_overlap_for_all, tmp)
+  }
+  
+  rownames(sum_overlap_for_all) <- tissues
+  colnames(sum_overlap_for_all) <- c("#of.sig.gene_single_group_cs_filtered", "#of.overlap", "#of.sig.gene_multi_group_cs_filtered")
+  
+  return(sum_overlap_for_all)
+}
+
 ```
 
 # Results
+
+* Results from multi-group analysis
 
 The results are summarized by 
 
@@ -203,6 +295,11 @@ The results are summarized by
 - by apaQTL: Number of genes where the ratio of apaQTL to combined PIP is greater than 0.8.
 - by sQTL+apaQTL: Number of genes where the combined ratio of apaQTL and sQTL to combined PIP is greater than 0.8, but neither apaQTL nor sQTL individually exceed 0.8.
 - unspecified: Number of genes not classified into any of the above categories.
+
+* Comparing with single group eQTL results 
+
+**Please not that the ealier single group eQTL analyses were performed under L=5 but the current analyses were under L=3**
+
 
 ## aFib
 
@@ -235,21 +332,21 @@ DT::datatable(combined_pip_by_contexts[combined_pip_by_contexts$combined_pip>0.8
 draw_gene_piechart(combined_pip_by_types)
 ```
 
-### Comparing with eQTL results (the tissue with the largest number of sig genes)
+### Comparing with single group eQTL results 
 
 ```{r echo=FALSE}
-tissue <- "Cells_Cultured_fibroblasts"
-sprintf("the top tissue is %s",tissue)
 
-file_res_single <- paste0("/project/xinhe/xsun/multi_group_ctwas/1.single_tissue/results/",trait,"/",tissue,"/",trait,"_",tissue,".finemap_res.RDS")
-finemap_res_single <- readRDS(file_res_single)
+tissues <- c("Cells_Cultured_fibroblasts","Whole_Blood","Adipose_Subcutaneous","Esophagus_Mucosa","Heart_Left_Ventricle")
+sprintf("the top tissues from single group analyses are %s",paste0(tissues,collapse = ","))
 
-sig_gene_single <- finemap_res_single[finemap_res_single$type !="SNP" & finemap_res_single$cs_index != 0 & finemap_res_single$susie_pip >0.8,]
-sig_gene_multi <- combined_pip_by_types[combined_pip_by_types$combined_pip > 0.8,]
+sum_overlap_for_all <- calculate_sum_overlap(tissues, trait, combined_pip_by_contexts, E_S_A_mapping)
+DT::datatable(sum_overlap_for_all,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','#of overlap for single eqtl analysis and multi group analysis'),options = list(pageLength = 5) )
 
 ```
 
 ## LDL
+
+### Results from multi-group analysis
 
 ```{r echo=FALSE}
 trait <- "LDL-ukb-d-30780_irnt"
@@ -274,7 +371,21 @@ DT::datatable(combined_pip_by_contexts[combined_pip_by_contexts$combined_pip>0.8
 draw_gene_piechart(combined_pip_by_types)
 ```
 
+### Comparing with single group eQTL results 
+
+```{r echo=FALSE}
+
+tissues <- c("Liver","Spleen","Adipose_Subcutaneous","Adrenal_Gland","Esophagus_Mucosa")
+sprintf("the top tissues from single group analyses are %s",paste0(tissues,collapse = ","))
+
+sum_overlap_for_all <- calculate_sum_overlap(tissues, trait, combined_pip_by_contexts, E_S_A_mapping)
+DT::datatable(sum_overlap_for_all,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','#of overlap for single eqtl analysis and multi group analysis'),options = list(pageLength = 5) )
+
+```
+
 ## SBP
+
+### Results from multi-group analysis
 
 ```{r echo=FALSE}
 trait <- "SBP-ukb-a-360"
@@ -299,7 +410,21 @@ DT::datatable(combined_pip_by_contexts[combined_pip_by_contexts$combined_pip>0.8
 draw_gene_piechart(combined_pip_by_types)
 ```
 
+### Comparing with single group eQTL results 
+
+```{r echo=FALSE}
+
+tissues <- c("Artery_Tibial","Adipose_Subcutaneous","Brain_Cortex","Heart_Left_Ventricle","Spleen")
+sprintf("the top tissues from single group analyses are %s",paste0(tissues,collapse = ","))
+
+sum_overlap_for_all <- calculate_sum_overlap(tissues, trait, combined_pip_by_contexts, E_S_A_mapping)
+DT::datatable(sum_overlap_for_all,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','#of overlap for single eqtl analysis and multi group analysis'),options = list(pageLength = 5) )
+
+```
+
 ## SCZ
+
+### Results from multi-group analysis
 
 ```{r echo=FALSE}
 trait <- "SCZ-ieu-b-5102"
@@ -324,7 +449,21 @@ DT::datatable(combined_pip_by_contexts[combined_pip_by_contexts$combined_pip>0.8
 draw_gene_piechart(combined_pip_by_types)
 ```
 
+### Comparing with single group eQTL results 
+
+```{r echo=FALSE}
+
+tissues <- c("Heart_Left_Ventricle","Adrenal_Gland","Artery_Coronary","Brain_Cerebellum","Stomach")
+sprintf("the top tissues from single group analyses are %s",paste0(tissues,collapse = ","))
+
+sum_overlap_for_all <- calculate_sum_overlap(tissues, trait, combined_pip_by_contexts, E_S_A_mapping)
+DT::datatable(sum_overlap_for_all,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','#of overlap for single eqtl analysis and multi group analysis'),options = list(pageLength = 5) )
+
+```
+
 ## WBC
+
+### Results from multi-group analysis
 
 ```{r echo=FALSE}
 trait <- "WBC-ieu-b-30"
@@ -347,4 +486,17 @@ DT::datatable(combined_pip_by_types[combined_pip_by_types$combined_pip>0.8,],cap
 DT::datatable(combined_pip_by_contexts[combined_pip_by_contexts$combined_pip>0.8,],caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','Combined PIP by tissue'),options = list(pageLength = 5) )
 
 draw_gene_piechart(combined_pip_by_types)
+```
+
+
+### Comparing with single group eQTL results 
+
+```{r echo=FALSE}
+
+tissues <- c("Whole_Blood","Adipose_Subcutaneous","Artery_Aorta","Skin_Sun_Exposed_Lower_leg","Spleen")
+sprintf("the top tissues from single group analyses are %s",paste0(tissues,collapse = ","))
+
+sum_overlap_for_all <- calculate_sum_overlap(tissues, trait, combined_pip_by_contexts, E_S_A_mapping)
+DT::datatable(sum_overlap_for_all,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','#of overlap for single eqtl analysis and multi group analysis'),options = list(pageLength = 5) )
+
 ```
